adicionado icone, corrigido bug de cor light e dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap');
+@custom-variant dark (&:where(.dark, .dark *));
 @import "tailwindcss";
 
 
@@ -6,8 +7,8 @@
 @theme {
     --color-brand-primary: #1E40AF;
     --color-brand-accent: #F59E0B;
-    --color-brand-dark: #0B1220;
-    --color-brand-card: #1E293B;
+    --color-brand-dark: #1E293B;
+    --color-brand-card: #0B1220;
     --color-brand-text: #E5E7EB;
     --color-brand-subtext: #94A3B8;
 }
